# binprotect

./: .gitignore  CMakeLists.txt  binprotect.sln  binprotect.vcxproj  binprotect.vcxproj.filters  cmake.toml  readme.md  vcpkg.json
ext/binwrite/assembler/: assembler.cpp  assembler.hpp
ext/binwrite/binary/: binary.cpp  binary.hpp  binary_disassembly.cpp  binary_jump_table.cpp  binary_rvas.cpp  portable_executable.cpp  portable_executable.hpp
ext/binwrite/disassembler/: decoded_operand.cpp  decoded_operand.hpp  disassembled_instruction.cpp  disassembled_instruction.hpp  disassembler.cpp  disassembler.hpp  mnemonic.cpp  mnemonic.hpp  register.cpp  register.hpp
ext/binwrite/function/: function.cpp  function.hpp
ext/binwrite/instruction/: basic_block.cpp  basic_block.hpp  instruction.hpp
ext/portable-executable/: exception_directory.cpp  exception_directory.hpp  export_directory.hpp  file.cpp  image.hpp  resource_directory.hpp  section_header.cpp
src/: main.cpp
src/assembler/: assembler.hpp
src/config/: config.cpp  config.hpp
src/control_flow/: control_flow_flattening.cpp  control_flow_flattening.hpp  control_flow_obfuscation.cpp  control_flow_obfuscation.hpp
src/linear_substitution/: linear_substitution.cpp  linear_substitution.hpp
src/math/: random.hpp
src/mba/: flag_behaviour.cpp  flag_behaviour.hpp  mba.cpp  mba.hpp
src/opaque_predicate/: opaque_predicate.cpp  opaque_predicate.hpp
src/virtual_machine/: hardware_register.cpp  hardware_register.hpp  operand.hpp  virtual_machine.cpp  virtual_machine.hpp  vm_context.cpp  vm_context.hpp
(+41 files in other folders)
